# wbia-tpl-pyhesaff

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.rst  clean.sh  pyproject.toml  run_developer_setup.sh  setup.py
.github/workflows/: python-publish.yml
CMake/: CMakeLists.txt  Config.cmake.in  FindPyHesaff.cmake  pyhesaff.pc.in  pyhesaff_utils.cmake
_docs/: conf.py
dev/_grave/: _junk.py  _pygrave.py  _pyhesaffexe.py  docker_build.py  ellipse_dbg1.py  run_tests_old.py
dev/_grave/sandbox/: sifttest.py
docker/: build_opencv_docker.py
docs/: genindex.html  index.html  objects.inv  py-modindex.html  pyhesaff.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/pyhesaff/: __main__.html  _pyhesaff.html  ctypes_interface.html
docs/_static/: documentation_options.js
pyhesaff/: __init__.py  __main__.py  _pyhesaff.py  ctypes_interface.py
requirements/: build.txt  runtime.txt  tests.txt
scripts/: ci_prepare_linux_for_build.sh  ci_prepare_macos_for_build.sh
src/cpp/: CMakeLists.txt
src/cpp/hesaff/: config.h  config.h.in  helpers.h  hesaff.cpp  hesaff.h  orientation.h  pyramid.h
test/: CMakeLists.txt  pyhestest.py  test_adaptive_scale.py  test_cpp_rotation_invariance.py  test_draw_keypoint.py  test_ellipse.py  test_exhaustive_ori_extract.py  test_patch_orientation.py
tests/: CMakeLists.txt  pyhestest.py  test_adaptive_scale.py  test_cpp_rotation_invariance.py  test_draw_keypoint.py  test_ellipse.py  test_exhaustive_ori_extract.py  test_patch_orientation.py  test_pyhesaff.py  test_pyhesaff_simple_iterative.py  test_pyhesaff_simple_parallel.py
