[build-system]
requires = ["setuptools", "wheel", "setuptools_scm[toml]", "scikit-build", "cmake", "ninja"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

[tool.cibuildwheel]
manylinux-x86_64-image = "quay.io/pypa/manylinux2014_x86_64:2025.04.19-1"
